@@ -1,7 +1,7 @@
 package org.xbrlapi.impl;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.w3c.dom.Element;
 import org.xbrlapi.Fragment;
@@ -17,12 +17,12 @@ import org.xbrlapi.utilities.XBRLException;
 public class LocatorImpl extends ArcEndImpl implements Locator {
 	
 	/**
-	 * @see org.xbrlapi.Locator#setTarget(URL)
+	 * @see org.xbrlapi.Locator#setTarget(URI)
 	 */
-	public void setTarget(URL url) throws XBRLException {
-		setMetaAttribute("absoluteHref",url.toString());
-		setMetaAttribute("targetDocumentURL",this.getTargetDocumentURL(url).toString());
-		setMetaAttribute("targetPointerValue",this.getTargetPointerValue(url.getRef()));
+	public void setTarget(URI uri) throws XBRLException {
+		setMetaAttribute("absoluteHref",uri.toString());
+		setMetaAttribute("targetDocumentURI",this.getTargetDocumentURI(uri).toString());
+		setMetaAttribute("targetPointerValue",this.getTargetPointerValue(uri.getFragment()));
 	}
 
     /**
@@ -41,27 +41,27 @@ public class LocatorImpl extends ArcEndImpl implements Locator {
     
     /**
      * Get the absolute value of the HREF to the metadata.
-     * @return The absolute URL specified by the locator HREF attribute.
+     * @return The absolute URI specified by the locator HREF attribute.
      * @throws XBRLException.
      * @see org.xbrlapi.Locator#getAbsoluteHref()
      */
-    public URL getAbsoluteHref() throws XBRLException {
+    public URI getAbsoluteHref() throws XBRLException {
     	try {
-    		return new URL(this.getMetadataRootElement().getAttribute("absoluteHref"));
-    	} catch (MalformedURLException e) {
-    		throw new XBRLException("Absolute URL in the HREF of the locator is malformed.",e);
+    		return new URI(this.getMetadataRootElement().getAttribute("absoluteHref"));
+    	} catch (URISyntaxException e) {
+    		throw new XBRLException("Absolute URI in the HREF of the locator is malformed.",e);
     	}
     }
     
     /**
-     * @see org.xbrlapi.Locator#getTargetDocumentURL()
+     * @see org.xbrlapi.Locator#getTargetDocumentURI()
      */
-    public URL getTargetDocumentURL() throws XBRLException {
+    public URI getTargetDocumentURI() throws XBRLException {
     	try {
-    	    URL originalURL = new URL(this.getMetadataRootElement().getAttribute("targetDocumentURL"));
-    		return this.getStore().getMatcher().getMatch(originalURL);
-    	} catch (MalformedURLException e) {
-    		throw new XBRLException("Absolute URL in the HREF of the locator is malformed.",e);
+    	    URI originalURI = new URI(this.getMetadataRootElement().getAttribute("targetDocumentURI"));
+    		return this.getStore().getMatcher().getMatch(originalURI);
+    	} catch (URISyntaxException e) {
+    		throw new XBRLException("Absolute URI in the HREF of the locator is malformed.",e);
     	}
     }
     
@@ -85,7 +85,7 @@ public class LocatorImpl extends ArcEndImpl implements Locator {
     	if (! pointerValue.equals("")) 
     		pointerCondition = " and "+ Constants.XBRLAPIPrefix+ ":" + "xptr/@value='" + pointerValue + "'";
 
-    	String query = "/"+ Constants.XBRLAPIPrefix+ ":" + "fragment[@url='" + getTargetDocumentURL() + "'" + pointerCondition + "]";
+    	String query = "/*[@uri='" + getTargetDocumentURI() + "'" + pointerCondition + "]";
     	FragmentList<Fragment> fragments = getStore().<Fragment>query(query);
     	if (fragments.getLength() == 0) throw new XBRLException("The simple link does not reference a fragment.");
     	if (fragments.getLength() > 1) throw new XBRLException("The simple link references more than one fragment.");
