@@ -1,6 +1,6 @@
 package org.xbrlapi.loader.tests;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.xbrlapi.data.dom.tests.BaseTestCase;
 import org.xbrlapi.loader.discoverer.Discoverer;
@@ -14,15 +14,15 @@ public class AsyncLoaderImplTestCase extends BaseTestCase {
 	private final String STARTING_POINT = "test.data.small.schema";
 	private final String STARTING_POINT_2 = "test.data.small.instance";
     private final String STARTING_POINT_3 = "real.data.xbrl.2.1.roles";	
-	private URL url1 = null;
-	private URL url2 = null;
-    private URL url3 = null;	
+	private URI uri1 = null;
+	private URI uri2 = null;
+    private URI uri3 = null;	
 	
 	protected void setUp() throws Exception {
 		super.setUp();
-		url1 = new URL(getURL(this.STARTING_POINT));
-		url2 = new URL(getURL(this.STARTING_POINT_2));
-        url3 = new URL(getURL(this.STARTING_POINT_3));
+		uri1 = new URI(getURI(this.STARTING_POINT));
+		uri2 = new URI(getURI(this.STARTING_POINT_2));
+        uri3 = new URI(getURI(this.STARTING_POINT_3));
 	}
 	
 	public AsyncLoaderImplTestCase(String arg0) {
@@ -34,9 +34,9 @@ public class AsyncLoaderImplTestCase extends BaseTestCase {
 	 */
 	public void testInterruption() {
 		try {
-	        loader.stashURL(this.url3);
-            loader.stashURL(this.url1);
-            loader.stashURL(this.url2);
+	        loader.stashURI(this.uri3);
+            loader.stashURI(this.uri1);
+            loader.stashURI(this.uri2);
             
             Discoverer d1 = new Discoverer(loader);
             Thread t1 = new Thread(d1);
@@ -49,10 +49,15 @@ public class AsyncLoaderImplTestCase extends BaseTestCase {
                 Thread.sleep(100);
             }
             loader.storeDocumentsToAnalyse();
-            assertTrue(store.getStoredURLs().size() < 14);
+            logger.info("# stored URIs = " + store.getStoredURIs().size());
+            assertTrue(store.getStoredURIs().size() < 14);
             assertTrue(store.getDocumentsToDiscover().size() > 0);
 			loader.discover();
-			assertTrue(store.getStoredURLs().size() > 14);
+            logger.info("# stored URIs = " + store.getStoredURIs().size());
+            for (String uri: store.getStoredURIs()) {
+                logger.info(uri);
+            }
+			assertTrue(store.getStoredURIs().size() > 14);
 		} catch (Exception e) {
 		    e.printStackTrace();
 			fail("Unexpected " + e.getMessage());
