@@ -1,6 +1,6 @@
 package org.xbrlapi.sax.identifiers.tests;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.xbrlapi.Concept;
 import org.xbrlapi.data.dom.tests.BaseTestCase;
@@ -13,11 +13,11 @@ import org.xbrlapi.utilities.XBRLException;
 public class IdentifierTestCase extends BaseTestCase {
 	
 	private final String STARTING_POINT = "real.data.sec.usgaap.3";
-	private URL url = null;
+	private URI uri = null;
 	
 	protected void setUp() throws Exception {
 		super.setUp();
-		url = new URL(getURL(this.STARTING_POINT));
+		uri = new URI(getURI(this.STARTING_POINT));
 	}
 	
 	public IdentifierTestCase(String arg0) {
@@ -29,7 +29,7 @@ public class IdentifierTestCase extends BaseTestCase {
 	 */
 	public void testFragmentIdentification() {
 		try {
-			loader.stashURL(url);
+			loader.stashURI(uri);
 			loader.discoverNext();
 			Concept concept = store.getConcept("http://www.microsoft.com/msft/xbrl/taxonomy/2005-02-28","CoverInformation");
 			assertEquals("CoverInformation",concept.getName());
