@@ -6,8 +6,8 @@ package org.xbrlapi.data.xindice;
  */
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.LinkedList;
 
@@ -33,13 +33,13 @@ public class Load implements EntryPoint {
 			// HashMap to store arguments
 			HashMap<String,String> arguments = new HashMap<String,String>();
 			
-			// List of URLs of documents to load
-			LinkedList<URL> startingURLs = new LinkedList<URL>();
+			// List of URIs of documents to load
+			LinkedList<URI> startingURIs = new LinkedList<URI>();
 			
 			// Process command line arguments
 			int i = 0;
 			if (i >= args.length)
-				badUsage("At least one URL must be specified to seed the data discovery process.");
+				badUsage("At least one URI must be specified to seed the data discovery process.");
 
 			while (true) {
 
@@ -82,9 +82,9 @@ public class Load implements EntryPoint {
 
 				} else {
 					try {
-						startingURLs.add(new URL(args[i]));
-					} catch (MalformedURLException e) {
-						badUsage(args[i] + " is a malformed URL.");
+						startingURIs.add(new URI(args[i]));
+					} catch (URISyntaxException e) {
+						badUsage(args[i] + " is a malformed URI.");
 					}
 				}
 				i++;
@@ -106,7 +106,7 @@ public class Load implements EntryPoint {
 			// Create an XLink processor for XBRL DTS discovery
 			XBRLXLinkHandlerImpl xlinkHandler = new XBRLXLinkHandlerImpl(); 
 			XLinkProcessor xlinkProcessor = new XLinkProcessorImpl(xlinkHandler, new XBRLCustomLinkRecogniserImpl());
-			Loader loader = new LoaderImpl(store,xlinkProcessor,startingURLs);
+			Loader loader = new LoaderImpl(store,xlinkProcessor,startingURIs);
 			xlinkHandler.setLoader(loader);
 			
 			// Set the entity resolver for the loader to use the specified caching folder
@@ -134,7 +134,7 @@ public class Load implements EntryPoint {
 		if (!"".equals(message)) {
 			System.err.println(message);
 		}
-		System.err.println("Command line usage: java org.xbrlapi.data.xindice.Load [parameters] [URLs]");
+		System.err.println("Command line usage: java org.xbrlapi.data.xindice.Load [parameters] [URIs]");
 		System.err.println("Parameters: ");
 		System.err.println("  -host			(mandatory) Database host domain name");
 		System.err.println("  -port			(mandatory) Database host port");
